--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -42,6 +45,29 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'androidx.activity:activity:1.8.1'
+    implementation 'androidx.fragment:fragment-ktx:1.3.6'
 
     implementation 'androidx.cardview:cardview:1.0.0'
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    // Retrofit with Scalar Converter
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+
+    // Moshi
+    implementation 'com.squareup.moshi:moshi-kotlin:1.13.0'
+    // Retrofit with Moshi Converter
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+
+    implementation 'com.google.code.gson:gson:2.8.9'
+
+    implementation "androidx.compose.ui:ui:1.0.5" // Check for the latest version
+    implementation "androidx.compose.material:material:1.0.5" // Check for the latest version
+    implementation "androidx.compose.ui:ui-tooling:1.0.5" // Check for the latest version
+    implementation "androidx.compose.ui:ui-tooling-preview:1.0.5" // Check for the latest version
+    implementation "androidx.compose.foundation:foundation:1.0.5" // Check for the latest version
+    implementation "androidx.compose.material:material-icons-core:1.0.5" // Check for the latest version
+    implementation "androidx.compose.material:material-icons-extended:1.0.5" // Check for the latest version
 }
